--- a/photovel/WebContent/index.html
+++ b/photovel/WebContent/index.html
@@ -123,32 +123,32 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <div class="item active">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+          <img src="/images/front/slide-01.jpg" alt="First slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Example headline.</h1>
-              <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+              <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>사진 스토리</code></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">사진 스토리</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAGZmZgAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+          <img src="/images/front/slide-02.jpg" alt="Second slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>Another example headline.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+              <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>지도 스토리</code></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">지도 스토리</a></p>
             </div>
           </div>
         </div>
         <div class="item">
-          <img src="data:image/gif;base64,R0lGODlhAQABAIAAAFVVVQAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+          <img src="/images/front/slide-03.jpg" alt="Third slide">
           <div class="container">
             <div class="carousel-caption">
-              <h1>One more for good measure.</h1>
-              <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+              <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>슬라이드 스토리</code></p>
+              <p><a class="btn btn-lg btn-primary" href="#" role="button">슬라이드 스토리</a></p>
             </div>
           </div>
         </div>
