--- a/photovel/WebContent/index.html
+++ b/photovel/WebContent/index.html
@@ -38,11 +38,11 @@
 	            <span class="icon-bar"></span>
 	            <span class="icon-bar"></span>
 	          </button>
-	          <a class="navbar-brand" href="#">Project name</a>
+	          <a class="navbar-brand" href="#">Photovel</a>
 	        </div>
 	        <div id="navbar" class="collapse navbar-collapse">
 	          <ul class="nav navbar-nav">
-	            <li class="active"><a href="#">Home</a></li>
+	            <!-- <li class="active"><a href="#">Home</a></li>
 	            <li><a href="#about">About</a></li>
 	            <li><a href="#contact">Contact</a></li>
 	            <li class="dropdown">
@@ -56,19 +56,19 @@
                     <li><a href="#">Separated link</a></li>
                     <li><a href="#">One more separated link</a></li>
                   </ul>
-                </li>
+                </li> -->
 	          </ul>
 	          
 	          
 	          <ul class="nav navbar-nav navbar-right">
-	            <li><a href="#">Dashboard</a></li>
+	            <!-- <li><a href="#">Dashboard</a></li>
 	            <li><a href="#">Settings</a></li>
-	            <li><a href="#">Profile</a></li>
-	            <li><a href="#">Help</a></li>
+	            <li><a href="#">Profile</a></li> -->
+	            <li><a href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store">Android App</a></li>
 	          </ul>
-	          <form class="navbar-form navbar-right">
+	          <!-- <form class="navbar-form navbar-right">
 	            <input type="text" class="form-control" placeholder="Search...">
-	          </form>
+	          </form> -->
 	        </div><!-- /.nav-collapse -->
 	      </div><!-- /.container -->
 	</nav><!-- /.navbar -->
@@ -127,8 +127,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
-              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>사진 스토리</code></p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">사진 스토리</a></p>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<br><code>사진 스토리</code></p>
+             <!--  <p><a class="btn btn-lg btn-primary" href="#" role="button">사진 스토리</a></p> -->
             </div>
           </div>
         </div>
@@ -137,8 +137,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
-              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>지도 스토리</code></p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">지도 스토리</a></p>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<br><code>지도 스토리</code></p>
+             <!--  <p><a class="btn btn-lg btn-primary" href="#" role="button">지도 스토리</a></p> -->
             </div>
           </div>
         </div>
@@ -147,8 +147,8 @@
           <div class="container">
             <div class="carousel-caption">
               <h1>포토블, 사진으로 만드는 3가지 여행 스토리</h1>
-              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<code>슬라이드 스토리</code></p>
-              <p><a class="btn btn-lg btn-primary" href="#" role="button">슬라이드 스토리</a></p>
+              <p>몇 번의 클릭으로 만드는 사진 여행 스토리. 세가지 스토리가 자동으로 완성됩니다.<br><code>슬라이드 스토리</code></p>
+              <!-- <p><a class="btn btn-lg btn-primary" href="#" role="button">슬라이드 스토리</a></p> -->
             </div>
           </div>
         </div>
@@ -171,27 +171,27 @@
     <div class="container marketing">
 
       <!-- Three columns of text below the carousel -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <p>사진 스토리 ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <p><a class="btn btn-default" href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
+        </div>/.col-lg-4
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
           <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
+          <p><a class="btn btn-default"href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
+        </div>/.col-lg-4
         <div class="col-lg-4">
           <img class="img-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" style="width: 140px; height: 140px;">
           <h2>Heading</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div><!-- /.col-lg-4 -->
-      </div><!-- /.row -->
-
+          <p><a class="btn btn-default"href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
+        </div>/.col-lg-4
+      </div>/.row
+ -->
 
       <!-- START THE FEATURETTES -->
 
@@ -199,11 +199,12 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurete-heading">사진<span class="text-muted"> 스토리</span></h2>
+          <p class="lead">여러분, 사진 업로드만 하세요. 제목도, 순서도, 경로도 포토블이 자동으로 생성해드릴 겁니다.</p>
+           <p><a class="btn btn-default" href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img style="border: 1px solid #fefefe"  class="featurette-image img-responsive" src="/images/front/photo500.png" alt="Generic placeholder image">
         </div>
       </div>
 
@@ -211,11 +212,12 @@
 
       <div class="row featurette">
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img style="border: 1px solid #fefefe"  class="featurette-image img-responsive" src="/images/front/map500.png" alt="Generic placeholder image">
         </div>
         <div class="col-md-7">
-          <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">지도 <span class="text-muted"> 스토리</span></h2>
+          <p class="lead">나의 여행 경로를 일일이 입력하지 않아도 지도에 사진과, 경로, 위치가 자동으로 표현되어 내 여행 기록이 보다 정확해집니다. </p>
+           <p><a class="btn btn-default" href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
         </div>
       </div>
 
@@ -223,11 +225,12 @@
 
       <div class="row featurette">
         <div class="col-md-7">
-          <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <h2 class="featurette-heading">슬라이드 <span class="text-muted"> 스토리</span></h2>
+          <p class="lead">여행뿐 아니라 내 아이의 돌잔치, 우리 회사 야유회 등 특별한 날의 사진이 자동 슬라이드화 되어 영상으로도 즐기실 수 있습니다.</p>
+           <p><a class="btn btn-default" href="https://play.google.com/store/apps/details?id=com.photovel" target="_blank" alt="Photovel Google Store" role="button">다운로드 하기 &raquo;</a></p>
         </div>
         <div class="col-md-5">
-          <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+          <img style="border: 1px solid #fefefe" class="featurette-image img-responsive" src="/images/front/slide500.png"alt="Generic placeholder image">
         </div>
       </div>
 
