0819morning - win8 crosssbrowsing

--- a/photovel/WebContent/index.html
+++ b/photovel/WebContent/index.html
@@ -10,8 +10,8 @@
 <meta property="og:title" content="메인페이지">
 <meta property="og:url" content="http://photovel.com">
 <meta property="og:description" content="Photovel,메인페이지,포토블">
-<meta property="og:image" content="/images/pic/user-a1.jpg" />
-
+<meta property="og:image" content="http://photovel.cdn3.cafe24.com/pic/user-a1.jpg" />
+<!-- //SEO -->
 <meta name="name" content="메인페이지">
 <meta name="keywords" content="Photovel,메인페이지">
 <meta name="description" content="Photovel,메인페이지,포토블">
@@ -20,19 +20,20 @@
 <title>Photovel</title>
 <link rel="stylesheet" type="text/css" href="/css/reset.css">
 <script src="https://use.fontawesome.com/3d9c57f5bf.js"></script>
-<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-<!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
 <link rel="stylesheet" type="text/css" href="/css/jquery.bxslider.css">
 <link rel="stylesheet" type="text/css" href="/css/common.css">
 <link rel="stylesheet" type="text/css" href="/css/main.css">
-<link rel="apple-touch-icon-precomposed" href="/images/photovel-touch-icon.png">
+<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+<!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="/js/remPolyfill.js"></script>
+<![endif]-->
+<link rel="apple-touch-icon-precomposed" href="/photovel-touch-icon.png">
 <script src="/js/jquery.min.js"></script>
 <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script> -->
 <script src="/js/jquery.bxslider.js"></script>
-<link rel="shortcut icon" href="/images/favicon.ico">
+<link rel="shortcut icon" href="/favicon.ico">
 
 <script>
 $(document).ready(function() {	
@@ -131,7 +132,7 @@ function fnScroll(seq){
 					<li><a href="">CREATE</a></li>
 				</ul>
 				<ul id="util">
-					<li><a href=""><span  class="login-info"><img src="/images/user/user-profile.jpg" class="prof-pic" alt="ninkname's profile picture"></span><span class="nickname">stella park</span></a>
+					<li><a href=""><span  class="login-info"><img src="http://photovel.cdn3.cafe24.com/user/user-profile.jpg" class="prof-pic" alt="ninkname's profile picture"></span><span class="nickname">stella park</span></a>
 						<ul class="sub">
 							<li><a href=""><span class="user-icon-my"></span> MY STORY</a></li>
 							<li><a href=""><span class="user-icon-group"></span> MY GROUP</a></li>
@@ -173,16 +174,16 @@ function fnScroll(seq){
 	<div id="slide" class="cfixed" >
 		<ul class="bxslider">
 			<li>
-				<img src="/images/p/slide-01.jpg" alt="포토블 사진 스토리 기능" 
+				<img src="http://photovel.cdn3.cafe24.com/p/slide-01.jpg" alt="포토블 사진 스토리 기능" 
 					title="사진은 여행,<br/> 사진 업로드만 하면 여행기 완성" />
 				<button class="btn-slide">여행 작성하기</button>	
 			</li>
 			<li>
-				<img src="/images/p/slide-02.jpg" alt="포토블 지도 스토리, 사진 업로드시 자동 생성됩니다." title="PHOTOVEL에서 당신의 사진은 <br/>여행 지도가 되고" />
+				<img src="http://photovel.cdn3.cafe24.com/p/slide-02.jpg" alt="포토블 지도 스토리, 사진 업로드시 자동 생성됩니다." title="PHOTOVEL에서 당신의 사진은 <br/>여행 지도가 되고" />
 				<button class="btn-slide">여행 지도 보러가기</button>	
 			</li>
 			<li>
-				<img src="/images/p/slide-03.jpg" alt="포토블 슬라이드 스토리, 사진 업로드시 자동 생성됩니다." title="PHOTOVEL에서 당신의  사진은<br/>슬라이드 영상이 됩니다." />
+				<img src="http://photovel.cdn3.cafe24.com/p/slide-03.jpg" alt="포토블 슬라이드 스토리, 사진 업로드시 자동 생성됩니다." title="PHOTOVEL에서 당신의  사진은<br/>슬라이드 영상이 됩니다." />
 				<button class="btn-slide">슬라이드 보러 가기</button>	
 			</li>
 		</ul>
@@ -205,7 +206,7 @@ function fnScroll(seq){
 			<ul class="list-cont">
 				<li>
 					<div class="card">
-						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="/images/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
+						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="http://photovel.cdn3.cafe24.com/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
 						<div class="card-text">
 							<div class="view-type">
 								<a href="" class="type1" title="지도로 보기"><span class="fa fa-flag"></span><span>지도로 보기</span></a>
@@ -239,7 +240,7 @@ function fnScroll(seq){
 								<div class="cont-box c-user-info cfixed">
 									<a href="" title="Stella Park의 프로필 보기 이동">
 										<div class="cont-left">
-											<img src="/images/user/user-profile.jpg" alt="profile picture of Stella Park">
+											<img src="http://photovel.cdn3.cafe24.com/user/user-profile.jpg" alt="profile picture of Stella Park">
 										</div>
 										<div class="cont-right">
 											<span class="user-nickname">Stella Park</span>
@@ -259,7 +260,7 @@ function fnScroll(seq){
 				
 				<li>
 					<div class="card">
-						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="/images/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
+						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="http://photovel.cdn3.cafe24.com/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
 						<div class="card-text">
 							<div class="view-type">
 								<a href="" class="type1" title="지도로 보기"><span class="fa fa-flag"></span><span>지도로 보기</span></a>
@@ -293,7 +294,7 @@ function fnScroll(seq){
 								<div class="cont-box c-user-info cfixed">
 									<a href="" title="Stella Park의 프로필 보기 이동">
 										<div class="cont-left">
-											<img src="/images/user/user-profile.jpg" alt="profile picture of Stella Park">
+											<img src="http://photovel.cdn3.cafe24.com/user/user-profile.jpg" alt="profile picture of Stella Park">
 										</div>
 										<div class="cont-right">
 											<span class="user-nickname">Stella Park</span>
@@ -312,7 +313,7 @@ function fnScroll(seq){
 				</li>
 				<li>
 					<div class="card">
-						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="/images/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
+						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="http://photovel.cdn3.cafe24.com/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
 						<div class="card-text">
 							<div class="view-type">
 								<a href="" class="type1" title="지도로 보기"><span class="fa fa-flag"></span><span>지도로 보기</span></a>
@@ -346,7 +347,7 @@ function fnScroll(seq){
 								<div class="cont-box c-user-info cfixed">
 									<a href="" title="Stella Park의 프로필 보기 이동">
 										<div class="cont-left">
-											<img src="/images/user/user-profile.jpg" alt="profile picture of Stella Park">
+											<img src="http://photovel.cdn3.cafe24.com/user/user-profile.jpg" alt="profile picture of Stella Park">
 										</div>
 										<div class="cont-right">
 											<span class="user-nickname">Stella Park</span>
@@ -366,7 +367,7 @@ function fnScroll(seq){
 				
 				<li>
 					<div class="card">
-						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="/images/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
+						<a href="/all/storyView.html" class="link-img" title="콘텐츠 상세보기-GET A BEAUTIFUL TRIP IN PARIS"><img src="http://photovel.cdn3.cafe24.com/pic/user-a1.jpg" class="card-img" alt="GET A BEAUTIFUL TRIP IN PARIS"></a>
 						<div class="card-text">
 							<div class="view-type">
 								<a href="" class="type1" title="지도로 보기"><span class="fa fa-flag"></span><span>지도로 보기</span></a>
@@ -400,7 +401,7 @@ function fnScroll(seq){
 								<div class="cont-box c-user-info cfixed">
 									<a href="" title="Stella Park의 프로필 보기 이동">
 										<div class="cont-left">
-											<img src="/images/user/user-profile.jpg" alt="profile picture of Stella Park">
+											<img src="http://photovel.cdn3.cafe24.com/user/user-profile.jpg" alt="profile picture of Stella Park">
 										</div>
 										<div class="cont-right">
 											<span class="user-nickname">Stella Park</span>
@@ -468,7 +469,7 @@ function fnScroll(seq){
 	</div>
 	<div class="container"> 
 		<div id="ad">
-			<img src="/images/p/ad.gif" alt="페브리즈 차량용">
+			<img src="http://photovel.cdn3.cafe24.com/p/ad.gif" alt="페브리즈 차량용">
 		</div>
 		</div>
 	<div id="partnership" class="cfixed">
